<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath/>
	</parent>
	<groupId>br.com.TecHelpAPI</groupId>
	<artifactId>TecHelpAPI</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>TecHelpAPI</name>
	<description>Demo project for Spring Boot</description>
	<properties>
		<java.version>21</java.version>
		<dozer.version>7.0.0</dozer.version>
	</properties>
	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>


			<repository>
				<id>microsoft</id>
				<name>Microsoft SQL Server JDBC</name>
				<url>https://repo.maven.apache.org/maven2/com/microsoft/sqlserver/</url>
			</repository>


	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>


		<dependency>
			<groupId>org.springframework.hateoas</groupId>
			<artifactId>spring-hateoas</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>1.7.0</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>12.2.0.jre11</version>
		</dependency>

		<dependency>
			<groupId>com.github.dozermapper</groupId>
			<artifactId>dozer-core</artifactId>
			<version>${dozer.version}</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.mockito</groupId>-->
<!--			<artifactId>mockito-core</artifactId>-->
<!--			<version>5.6.0</version>-->
<!--			<scope>test</scope>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>net.bytebuddy</groupId>-->
<!--			<artifactId>byte-buddy</artifactId>-->
<!--			<version>1.14.4</version> &lt;!&ndash; Ou versão mais recente &ndash;&gt;-->
<!--		</dependency>-->

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>

			<!--			<plugin>-->
<!--				<groupId>org.apache.maven.plugins</groupId>-->
<!--				<artifactId>maven-surefire-plugin</artifactId>-->
<!--				<version>3.1.2</version> &lt;!&ndash; Versão mais recente ou compatível &ndash;&gt;-->
<!--				<configuration>-->
<!--					<argLine>-->
<!--						-Djdk.instrument.traceUsage=false-->
<!--						-XX:+EnableDynamicAgentLoading-->
<!--						-Dmockito.extension.disable.agent=true-->
<!--					</argLine>-->
<!--				</configuration>-->
<!--			</plugin>-->
		</plugins>
	</build>
</project>